--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-hook-form": "^7.51.0"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/react": "^14.2.1",
     "@types/mocha": "^10.0.6",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/react-redux": "^7.1.33",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
@@ -34,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "normalize.css": "^8.0.1",
     "prettier": "^3.2.5",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "typescript": "^5.2.2",
     "uuid": "^9.0.1",
